--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Run tests
-      run: "npx playwright test"
+    - name: Install Playwright browsers
+      run: npx playwright install
